<resources>
    <string name="app_name">PPN</string>
<!--    Back4App api keys-->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">WRTGnB8xkOR92EmvpCnYMhlfdxxEhNb9JtnhA0xx</string>
    <string name="back4app_client_key">SuOvmVsgyfI1IsxzTYlzHA1h1Xm6XdpOBM37L3KX</string>
<!--    Login Page-->
    <string name="welcome">Welcome</string>
    <string name="login_str">Please login with your information</string>
    <string name="email_usr">Email or username</string>
    <string name="email_usr_hint">Email or username</string>
    <string name="pwd">Password</string>
    <string name="pwd_hint">Password</string>
    <string name="remember">Remember me</string>
    <string name="register_link"><u>Don\'t have an account?</u></string>
    <string name="login_btn">Login</string>
<!--    Register Page-->
    <string name="sign_up">Sign up</string>
    <string name="sign_up_str">Please sign up with your information</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="pwd2_hint">Re-password</string>
    <string name="login_link"><u>Already have an account?</u></string>
    <string name="register_btn">Register</string>
<!--    Home Page-->
    <string name="device">Device</string>
    <string name="settings">Settings</string>
    <string name="import_config">Import Config</string>
    <string name="about">About</string>
    <string name="selected_server">Selected Server:</string>
    <string name="icon_of_iran">Icon of Iran</string>
    <string name="tehran">[Tehran]</string>
    <string name="ping">Ping:</string>
    <string name="tap_to_test">Tap to test</string>
    <string name="connection_time">Connection Time:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="spent_traffic">Spent Traffic:</string>
    <string name="_0_b_0_b">0 B | 0 B</string>
    <string name="connect">Connect</string>
<!--    Settings Page-->
    <string name="device_id">Device ID</string>
    <string name="device_id_will_change_on_re_install">(Device ID will change on re-install</string>
    <string name="vpn">VPN</string>
    <string name="xray_version_1_8_10">Xray Version: 1.8.10</string>
    <string name="app_version_1_0_0">App Version: 1.0.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="email_admin_ppngp_dev">Email: admin@ppngp.dev</string>
    <string name="logout">Logout</string>
<!--    Import Page-->
    <string name="choose_your_server">Choose your Server</string>
    <string name="tehran_plain">Tehran</string>
    <string name="mashhad">Mashhad</string>
    <string name="shiraz">Shiraz</string>
    <string name="isfahan">Isfahan</string>
    <string name="karaj">Karaj</string>
    <string name="arak">Arak</string>
    <string-array name="servers_array">
        <item>Tehran</item>
        <item>Mashhad</item>
        <item>Shiraz</item>
        <item>Isfahan</item>
        <item>Karaj</item>
        <item>Arak</item>
    </string-array>
</resources>