<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".RegisterPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:background="@drawable/logo"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/sign_up_str"
                android:textColor="@android:color/black"
                android:layout_gravity="center"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usr_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:textColor="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:hint="@string/pwd_hint"
                    android:inputType="textPassword"
                    android:textColor="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwd2_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:hint="@string/pwd2_hint"
                    android:inputType="textPassword"
                    android:textColor="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/login_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_link"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register_btn"
                android:textSize="15sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
